# s21_SmartCalc_v2.0

./: README.md
src/: Makefile  documentation.md
src/SmartCalc_v2/: CMakeLists.txt  main.cpp  plotwindow.cpp  plotwindow.h  plotwindow.ui  sccontroller.cpp  sccontroller.h  scmodel.cpp  scmodel.h  scview.cpp  scview.h  scview.ui
src/SmartCalc_v2/CreditCalc/: cccontroller.cpp  cccontroller.h  ccmodel.cpp  ccmodel.h
src/SmartCalc_v2/QCustomPlot/: Makefile
src/SmartCalc_v2/QCustomPlot/lib/: Makefile  config.h
src/SmartCalc_v2_tests/: CMakeLists.txt  tst_regular.cpp
